fixed checkbox hover bug on mobile

--- a/src/components/checkbox/index.scss
+++ b/src/components/checkbox/index.scss
@@ -33,9 +33,11 @@
       color: $electricity;
     }
 
-    &[type="checkbox"]:hover {
-      &:after {
-        content: 'X';
+    @media screen and (hover:hover) {
+      &[type="checkbox"]:hover {
+        &:after {
+          content: 'X';
+        }
       }
     }
   }
